# rintintin

./: .gitignore  CMakeLists.txt  README.md
include/: rintintin.h
src/: rintintin.c  rintintin_attrib.c  rintintin_constraint_solver.c  rintintin_constraint_solver.h  rintintin_eigen.c  rintintin_eigen.h  rintintin_latent_methods.c  rintintin_latent_methods.h  rintintin_latentspace.c  rintintin_latentspace.h  rintintin_math.h  rintintin_mesh.c  rintintin_mesh.h  rintintin_scratch.h  rintintin_solver.c  rintintin_solver.h  rintintin_sqrt.h  rintintin_type_hinting.h
